<resources>
    <string name="app_name">Investor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="investor">Investor</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="summary_profit">Summary profit:</string>
    <string name="daily_profit">Daily profit:</string>
    <string name="ticker">Ticker</string>
    <string name="amount">Amount</string>
    <string name="purchase_price">Purchase price</string>
    <string name="purchase_tax">Purchase tax</string>
    <string name="purchase_currency">Purchase currency</string>
    <string name="current_currency">Current currency</string>
    <string name="current_price">Current price</string>
    <string name="total_profit">Total profit</string>
    <string name="profitability">Profitability</string>
    <string name="dividends">Dividends</string>
    <string name="write_ticker">write ticker</string>
    <string name="write_quantity">write quantity</string>
    <string name="quantity">Quantity</string>
    <string name="write_price">write price</string>
    <string name="price">Price</string>
    <string name="write_tax">write tax</string>
    <string name="tax">Tax</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="save_changes">Save changes</string>
    <string name="arrow_green_or_red">Arrow green or red</string>
    <string name="add_stock">Add stock</string>
    <string name="add_a_stock">Add a stock</string>
    <string name="investor_notification_channel_id">notification_channel</string>
</resources>