<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.buyStockWindow.BuyStockWindowFragment">
    <!-- 0) header -->
    <TextView
        android:id="@+id/buy_stock_header_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Please enter the blank lines: " />
    <!-- 1) Ticker -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buy_stock_ticker_value_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:hint="@string/write_ticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_header_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buy_stock_ticker_value_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- 2) Quantity -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buy_stock_quantity_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:hint="@string/write_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_ticker_value_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buy_stock_quantity_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number" />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- 3) Price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buy_stock_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:hint="@string/write_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_quantity_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buy_stock_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>


    <!-- 4) Tax -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buy_stock_tax_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:hint="@string/write_tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_price_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/buy_stock_tax_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Button <Buy> -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buy_stock_buy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_spacing"
        android:text="@string/buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buy_stock_tax_input" />

</androidx.constraintlayout.widget.ConstraintLayout>